# ChangeLog for sys-fs/reiserfsprogs
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.3 2003/09/23 17:29:11 drobbins Exp $

*reiserfsprogs-3.6.11-r1 (23 Sep 2003)

  23 Sep 2003; Daniel Robbins <drobbins@gentoo.org>: 
  reiserfsprogs-3.6.11-r1.ebuild: includes an important fix for IA-64 
  systems that prevents reiserfsck errors. Thanks to Vitaly Fertman of the 
  Namesys/ReiserFS team for this fix.

  16 Sep 2003; Jason Wever <weeve@gentoo.org> reiserfsprogs-3.6.8.ebuild:
  Marked stable for sparc.

*reiserfsprogs-3.6.4-r1 (15 Sep 2003)

  15 Sep 2003; Seemant Kulleen <seemant@gentoo.org>
  reiserfsprogs-3.6.10.ebuild, reiserfsprogs-3.6.11.ebuild,
  reiserfsprogs-3.6.3.ebuild, reiserfsprogs-3.6.4-r1.ebuild,
  reiserfsprogs-3.6.8.ebuild, reiserfsprogs-3.6.9.ebuild,
  files/reiserfsprogs-3.6.4-bitops.patch,
  files/reiserfsprogs-3.6.5-flush_buffers-bug.patch:
  moved to sys-fs

*reiserfsprogs-3.6.11 (05 Aug 2003)

  05 Aug 2003; Brandon Low <lostlogic@gentoo.org> reiserfsprogs-3.6.11.ebuild:
  Bump

*reiserfsprogs-3.6.10 (27 Jul 2003)

  27 Jul 2003; Brandon Low <lostlogic@gentoo.org> reiserfsprogs-3.6.10.ebuild:
  Bump

*reiserfsprogs-3.6.9 (16 Jul 2003)

  16 Jul 2003; Brandon Low <lostlogic@gentoo.org> reiserfsprogs-3.6.9.ebuild:
  Bump

  31 May 2003; Daniel Robbins <drobbins@gentoo.org> reiserfsprogs-3.6.8.ebuild:
  Bumping to x86 stable.

*reiserfsprogs-3.6.8 (20 May 2003)

  20 May 2003; Brandon Low <lostlogic@gentoo.org> reiserfsprogs-3.6.8.ebuild:
  Bump

*reiserfsprogs-3.6.7 (02 May 2003)

  02 May 2003; root <root@gentoo.org> reiserfsprogs-3.6.5-r1.ebuild,
  reiserfsprogs-3.6.6.ebuild, reiserfsprogs-3.6.7.ebuild:
  Ok, so both 3.6.5 and 3.6.6 have been declared 'do not use' by the namesys
  people, those using either of these versions may need to rebuild their SBs
  AGAIN (thats why they were unstable still).

*reiserfsprogs-3.6.6 (24 Apr 2003)
