@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/reiserfsprogs-3.6.11-r1.ebuild,v 1.1 2003/09/23 17:29:11 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/reiserfsprogs-3.6.11-r1.ebuild,v 1.2 2003/09/29 20:42:02 agriffis Exp $
 
 inherit flag-o-matic eutils
 
@@ -17,13 +17,12 @@ KEYWORDS="ia64"
 
 src_unpack() {
 	unpack ${A}
-	if [ "$ARCH" = "ia64" ]
-	then
-		#Should work on everything, but needed on IA-64. Thanks
-		#to Vitaly Fertman from the Namesys/ReiserFS team for
-		#this fix. Makes reiserfsck work. (drobbins, 23 Sep 03)
+	if [ "$ARCH" = "ia64" ]; then
+		# Should work on everything, but needed on IA-64. Thanks
+		# to Vitaly Fertman from the Namesys/ReiserFS team for
+		# this fix. Makes reiserfsck work. (drobbins, 23 Sep 03)
 		cd ${S}
-		cat ${FILESDIR}/blk_size.patch | patch -p2 || die "patch application failure"
+		patch -p2 < ${FILESDIR}/blk_size.patch || die "blk_size.patch failure"
 	fi
 }
 
