@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/reiserfsprogs
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.3 2003/09/23 17:29:11 drobbins Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/reiserfsprogs/ChangeLog,v 1.4 2003/09/29 20:42:02 agriffis Exp $
+
+  29 Sep 2003; Aron Griffis <agriffis@gentoo.org>
+  reiserfsprogs-3.6.11-r1.ebuild:
+  Minor ebuild cleanup
 
 *reiserfsprogs-3.6.11-r1 (23 Sep 2003)
 
